# 311resource

./: .gitignore  NOTICE  README.md
docs/: README.md
extractor/: README.md  pyproject.toml
extractor/ida/data/python_idb/: san11pk_dump.exe_functions.csv  san11pk_dump.exe_names.csv  san11pk_dump.exe_struct_members.csv  san11pk_dump.exe_structs.csv  summary.json
extractor/ida/data/resource_hints/: map_grid_related_symbols.csv  map_grid_related_symbols.json  map_grid_runtime_members.csv  map_grid_runtime_members.json  map_grid_shex_notes.md  objs_shadow_candidates.csv  objs_shadow_candidates.json  person_struct_catalog.csv  person_struct_catalog.json  shadow_names.csv  shadow_names.json  skill_struct_catalog.csv  skill_struct_catalog.json  summary.json
extractor/src/san11resource/: __init__.py  cli.py  main.py
extractor/src/san11resource/aimg/: __init__.py  export_aimg.py  overlay_aimg.py
extractor/src/san11resource/face/: __init__.py  export_fce.py
extractor/src/san11resource/ida/: __init__.py  build_resource_hints.py  export_python_idb.py
extractor/src/san11resource/map/: __init__.py  analyze_map_candidates.py  export_shex.py
extractor/src/san11resource/model/: __init__.py  export_wkmd.py
extractor/src/san11resource/recognized/: __init__.py  analyze_recognized.py
extractor/src/san11resource/resource/: __init__.py  analyze_coverage.py  export_resources.py
extractor/src/san11resource/stage/: __init__.py  extract_stage_paths.py
extractor/tests/: test_glb_export.py  test_k3st_export.py  test_stage_paths.py  test_wftx_export.py
viewer/: README.md  (+5 more)
(+32 files in other folders)
